<resources>
    <string name="app_name">ByMexSDKDemo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="str_tab_home">首页</string>
    <string name="str_tab_order">跟单</string>
    <string name="str_tab_contract">合约</string>
    <string name="str_tab_otc">法币</string>
    <string name="str_tab_asset">资产</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_deposit">充值</string>
    <string name="str_help">帮助中心</string>
    <string name="str_new_guide">新手指南</string>
    <string name="str_account_security">账户安全</string>
    <string name="str_setting">设置</string>
    <string name="str_register">注册</string>
    <string name="str_login">登录</string>
    <string name="str_phone_email">手机号码/邮箱</string>
    <string name="str_login_pwd">登录密码</string>
    <string name="str_forget_pwd">忘记密码</string>
    <string name="str_phone_register">手机注册</string>
    <string name="str_email_register">邮箱注册</string>
    <string name="str_countries_regions">国家地区</string>
    <string name="str_phone">手机号码</string>
    <string name="str_email">邮箱</string>
    <string name="str_setting_pwd">设置密码</string>
    <string name="str_sure_pwd">确认密码</string>
    <string name="str_continue">继续</string>
    <string name="str_register_agree">注册即代表同意</string>
    <string name="str_user_agreement_label">《ByMex用户协议》</string>
    <string name="str_and">和</string>
    <string name="str_legal_explain">《法律声明》</string>
    <string name="tv_security_verification">安全验证</string>
    <string name="str_verify_code_tips">没收到验证码？点击这里重新发送</string>
    <string name="str_count_down_time">重新发送 %S S</string>
    <string name="str_select_area">选择国家</string>
    <string name="str_reset_login_pwd">重置登录密码</string>
    <string name="str_pwd_input_tips">8-20位数字和字母的组合</string>
    <string name="str_submit">提交</string>
    <string name="str_update_pwd_tips">修改登录密码后24小时内禁止提币</string>
    <string name="str_password_too_short">密码太短</string>
    <string name="str_captcha_verify_succeed">验证成功</string>
    <string name="str_captcha_verify_failed">验证失败</string>
    <string name="str_login_success">登录成功!</string>
    <string name="str_user_cancel">用户取消</string>
    <string name="str_account_not_exist">账户不存在</string>
    <string name="str_sms_code_tips">请输入%s收到的验证码</string>
    <string name="str_user_label">用户</string>
    <string name="str_resetpwd_succeed">重置密码成功</string>
    <string name="str_register_success">注册成功</string>
    <string name="str_account_exist">用户已存在</string>
    <string name="str_user_agreement">用户协议</string>
    <string name="str_say_hi">Hi，%s</string>
    <string name="str_welcome_login">欢迎登录Bymex</string>
    <string name="str_phone_simple">手机</string>
    <string name="str_second_verify">二次验证</string>
    <string name="str_google_verify">谷歌验证器</string>
    <string name="str_pwd_setting">密码设置</string>
    <string name="str_fund_pwd">资金密码</string>
    <string name="str_login_setting">登录设置</string>
    <string name="str_gesture_pwd">手势密码</string>
    <string name="str_finger_pwd">指纹密码</string>
    <string name="str_tread_confirm">交易确认</string>
    <string name="str_unbind">未绑定</string>
    <string name="str_update">修改</string>
    <string name="str_un_setting">未设置</string>
    <string name="str_has_bind">已绑定</string>
    <string name="str_transfer_record">转账记录</string>
    <string name="str_wallet_account">钱包账户</string>
    <string name="str_contract_account">合约账户</string>
    <string name="str_transfer_vol">划转数量</string>
    <string name="str_transfer">划转</string>
    <string name="str_transfer_success">划转成功</string>
    <string name="str_select_coin">选择币种</string>
    <string name="str_exit">退出</string>
    <string name="str_language">语言</string>
    <string name="str_simplified_chinese">简体中文</string>
    <string name="str_green_up_red_down">绿涨红跌</string>
    <string name="str_red_up_green_down">红涨绿跌</string>
    <string name="str_rise_fall_color">涨跌色</string>
    <string name="str_personal_info">个人信息</string>
    <string name="str_photo">头像</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_un_sopport_photo">目前暂时不支持头像修改，修改头像会很快上线哦！</string>
    <string name="str_save">保存</string>
    <string name="str_setting_fail">设置失败</string>
    <string name="str_setting_success">设置成功</string>
    <string name="str_bind">绑定</string>
    <string name="str_sms_verify_label">短信验证</string>
    <string name="str_email_verify_label">邮箱验证</string>
    <string name="str_load_verify">获取验证码</string>
    <string name="str_bind_phone">绑定手机</string>
    <string name="str_bind_email">绑定邮箱</string>
    <string name="str_bind_success">绑定成功</string>
    <string name="str_bind_google_authenticator">绑定Google验证码</string>
    <string name="str_bind_google_tips1">在Google验证器中添加该密匙</string>
    <string name="str_copy">复制</string>
    <string name="str_google_code_label">谷歌验证码</string>
    <string name="str_copy_succeed">拷贝成功!</string>
    <string name="str_unbind_more">已绑定,去解绑</string>
    <string name="str_setting_asset_pwd">设置资金密码</string>
    <string name="str_asset_pwd_num_tips">资金密码为6位数</string>
    <string name="str_update_asset_pwd">修改资金密码</string>
    <string name="str_update_asset_pwd_tips">修改资金密码后24小时内禁止提币</string>
    <string name="str_create_gesture_default">请设置手势密码</string>
    <string name="str_create_gesture_correct">请再次绘制手势密码</string>
    <string name="str_create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="str_create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="str_create_gesture_confirm_correct">设置成功</string>
    <string name="str_gesture_open_tips">开启后，通过验证“手势密码”，进行快速登录</string>
    <string name="str_agree">同意</string>
    <string name="str_finger_open_tips">开启后，通过验证“指纹密码”，进行快速登录</string>
    <string name="str_verify_gesture">请先验证手势密码</string>
    <string name="str_gesture_default">请绘制手势密码</string>
    <string name="str_gesture_error">手势密码绘制错误</string>
    <string name="str_gesture_correct">输入正确</string>
    <string name="str_finger_setting_success">指纹设置成功!</string>
    <string name="str_click_firger_tips">点击指纹传感器进行指纹验证</string>
    <string name="str_finger_login">指纹登录</string>
    <string name="str_pwd_login">使用密码登录</string>
    <string name="str_confirm_close_finger_login">确认关闭指纹登录?</string>
    <string name="str_click_unlock_finger">点击进行指纹解锁</string>
    <string name="str_verify_finger">请验证指纹</string>
    <string name="str_un_bind_google_code">谷歌验证器</string>
    <string name="str_google_code_tips">请输入谷歌验证器收到的验证码</string>
    <string name="str_press_exit_app">再按一次退出程序</string>
    <string name="str_no_fund_pwd">不输入资金密码</string>
    <string name="str_effect_single">单次有效</string>
    <string name="str_minutes">分钟</string>
    <string name="str_hours">小时</string>
    <string name="str_pwd_effect_time">密码有效时间</string>
    <string name="str_input_fund_pwd">请输入资金密码</string>
    <string name="str_asset_pre">资产总览</string>
    <string name="str_total_asset_conversion">总资产折合</string>
    <string name="str_withdraw">提现</string>
    <string name="str_asset_flow">资金流水</string>
    <string name="str_total_asset">总资产</string>
    <string name="str_mention_filling_record">充提记录</string>
    <string name="str_deposit_warn">请不要向以下地址充值除 %s 之外的资产，任何充入此地址的其他资产将不可找回。</string>
    <string name="str_net_fail">网络错误</string>
    <string name="str_wallet_address">钱包地址</string>
    <string name="str_save_qr_code">保存二维码</string>
    <string name="str_scan_block_browser">查看区块链浏览器</string>
    <string name="str_warm_prompt">温馨提示</string>
    <string name="str_deposit_prompt">1.需要%1$s个网络确认才能到账，请勿向上述地址充值任何非%2$s资产，否则不可找回。\n2.充值自动到账时间约为10-30分钟</string>
    <string name="str_memo_label">标签(Memo)</string>
    <string name="str_eos_caution">同时使用充币地址和标签(Memo)才能成功充值</string>
    <string name="str_copy_success">复制成功</string>
    <string name="str_save_photo_tips">是否保存图片到SD卡？</string>
    <string name="str_permission_deny">权限被拒绝!</string>
    <string name="str_input_withdraw_address">请输入或粘贴地址</string>
    <string name="str_withdraw_vol">请输入提现数量</string>
    <string name="str_confirm">确认</string>
    <string name="str_miners_fee">矿工手续费</string>
    <string name="str_actual_to_account">实际到账</string>
    <string name="str_input_asset_pwd">请输入六位资金密码</string>
    <string name="str_input_eos_tag">请输入或粘贴标签</string>
    <string name="str_not_surricient_funds">余额不足</string>
    <string name="str_minium_withdraw">最小提现额度为</string>
    <string name="str_asset_audit">审核中</string>
    <string name="str_settle_created">已提交</string>
    <string name="str_settle_passed">审核通过</string>
    <string name="str_settle_rejected">审核拒绝</string>
    <string name="str_settle_signed">转账签名</string>
    <string name="str_settle_pending">正在转账</string>
    <string name="str_settle_success">成功</string>
    <string name="str_settle_failed">失败</string>
    <string name="str_settle_timeout">超时</string>
    <string name="str_withdraw_address">提现地址</string>
    <string name="str_deposit_address">充值地址</string>
    <string name="str_transfer_in_account">转入账户</string>
    <string name="str_transfer_out_account">转出账户</string>
</resources>
