<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <com.sl.ui.library.widget.TitleBarLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_title="@string/str_setting_asset_pwd" />

    <!--设置密码-->
    <com.sl.ui.library.widget.CommonInputLayout
        android:id="@+id/input_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        app:inputHelperHint=""
        app:inputHint="@string/str_fund_pwd"
        app:rightIcon="@drawable/icon_eye_off" />

    <!--确认密码-->
    <com.sl.ui.library.widget.CommonInputLayout
        android:id="@+id/input_sure_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        app:inputHelperHint="@string/str_asset_pwd_num_tips"
        app:inputHint="@string/str_sure_pwd"
        app:rightIcon="@drawable/icon_eye_off" />


    <!--谷歌验证码-->
    <com.sl.ui.library.widget.CommonInputLayout
        android:layout_marginBottom="30dp"
        android:id="@+id/input_google_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        app:inputHelperHint=""
        app:inputHint="@string/str_google_code_label"
        />

    <TextView
        android:id="@+id/tv_update_asset_pwd_tips"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_update_asset_pwd_tips"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_m" />

    <com.sl.ui.library.widget.CommonlyUsedButton
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:bgColor="@color/main_yellow"
        app:bottonTextContent="@string/str_submit"
        app:buttonTextColor="@color/text_color"
        app:normalEnable="true"
        app:textStyleBold="true" />

</LinearLayout>