<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
   >

    <com.sl.ui.library.widget.TitleBarLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_right_text="@string/str_register"/>
    <LinearLayout
        android:id="@+id/ll_warp_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <include
        layout="@layout/include_login_header_layout"
        />

    <!--手机号码/邮箱-->
    <com.sl.ui.library.widget.CommonInputLayout
        android:id="@+id/input_phone_layout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:inputHint = "@string/str_phone_email"
        app:inputHelperHint=""
        />

    <!--登录密码-->
    <com.sl.ui.library.widget.CommonInputLayout
        android:id="@+id/input_pwd_layout"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:inputHint = "@string/str_login_pwd"
        app:inputHelperHint=""
        app:rightIcon="@drawable/icon_eye_off"
        />
    <!--忘记密码-->
    <TextView
        android:id="@+id/tv_forget"
        android:paddingTop="20dp"
        android:textSize="@dimen/font_size_m"
        android:textColor="@color/main_yellow"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/str_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.sl.ui.library.widget.CommonlyUsedButton
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/bt_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:bgColor="@color/main_yellow"
        app:bottonTextContent="@string/str_login"
        app:buttonTextColor="@color/text_color"
        app:normalEnable="true"
        app:textStyleBold="true" />

    </LinearLayout>
</LinearLayout>